--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -181,11 +181,20 @@
 
 // Author
 .author {
-  margin-top: 6.3rem;
-  margin-bottom: 7.2rem;
-  text-align: left;
+  display: flex;
+  align-items: flex-start;
+  gap: 1.5rem;
+  padding: 1.5rem;
+  border: 1px solid #ddd;
+  border-radius: 12px;
+  background-color: #fafafa;
+  max-width: 600px;
+  margin: 6.3rem auto 7.2rem auto;
 
   @include media-query($on-mobile) {
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
     margin-bottom: 3em;
   }
 
@@ -200,18 +209,39 @@
     -webkit-animation: 0.5s ease-in forwards fadein;
     animation: 0.5s ease-in forwards fadein;
     opacity: 1;
+    flex-shrink: 0;
   }
 
-  .author-name {
-    font-size: 1.7em;
-    margin-bottom: 2px;
-  }
+  .author-info {
+    display: flex;
+    flex-direction: column;
 
-  .author-bio {
-    margin: 0 auto;
-    opacity: 0.9;
-    max-width: 393px;
-    line-height: 1.688;
+    .author-name {
+      font-size: 1.7em;
+      margin: 0 0 5px 0;
+    }
+
+    .author-bio {
+      opacity: 0.9;
+      max-width: 100%;
+      line-height: 1.6;
+      margin-bottom: 0.8rem;
+    }
+
+    .author-links {
+      display: flex;
+      gap: 1rem;
+
+      a {
+        text-decoration: none;
+        color: #0077b5;
+        font-weight: 500;
+
+        &:hover {
+          text-decoration: underline;
+        }
+      }
+    }
   }
 }
 
