--- a/_includes/author.html
+++ b/_includes/author.html
@@ -4,6 +4,13 @@
     src="{{ site.author.avatar }}"
     alt="{{ site.author.username }}"
   />
-  <h2 class="author-name">{{ site.author.name }}</h2>
-  <p class="author-bio">{{ site.author.bio }}</p>
+  <div class="author-info">
+    <h2 class="author-name">{{ site.author.name }}</h2>
+    <p class="author-bio">{{ site.author.bio }}</p>
+    <div class="author-links">
+      <a href="{{ site.author.github }}" target="_blank">GitHub</a>
+      <a href="{{ site.author.twitter }}" target="_blank">Twitter</a>
+      <a href="{{ site.author.website }}" target="_blank">Website</a>
+    </div>
+  </div>
 </div>
