--- a/_sass/klise/_layout.scss
+++ b/_sass/klise/_layout.scss
@@ -185,9 +185,9 @@
   align-items: flex-start;
   gap: 1.5rem;
   padding: 1.5rem;
-  border: 1px solid #161414;
+  //border: 1px solid #161414;
   border-radius: 12px;
-  background-color: #413e3e;
+  //background-color: #413e3e;
   max-width: 600px;
   margin: 6.3rem auto 7.2rem auto;
 
