--- a/_sass/klise/_post.scss
+++ b/_sass/klise/_post.scss
@@ -28,7 +28,7 @@
   .header-title {
     font-size: 2em;
     line-height: 1.2;
-    margin-top: 10px;
+    //margin-top: 10px;
     margin-bottom: 20px;
 
     &.center {
